manifests/apps/media/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: media-manager
    component: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: media-manager
      component: sonarr
  template:
    metadata:
      labels:
        app: media-manager
        component: sonarr
    spec:
      hostname: sonarr
      containers:
      - image: linuxserver/sonarr:4.0.20
        name: sonarr
        ports:
        - containerPort: 8989
          name: webui
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 192Mi
          limits:
            cpu: 250m
            memory: 384Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - peggy
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-pvc
      - name: data
        nfs:
          server: 10.0.0.13
          path: /mnt/data/library
          readOnly: false
      restartPolicy: Always
