manifests/apps/media/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: media
  labels:
    app: media-manager
    component: sonarr
spec:
  selector:
    app: media-manager
    component: sonarr
  ports:
  - port: 8989
    name: webui
    protocol: TCP
